--- a/AEF_Final_Exam_2022.Rmd
+++ b/AEF_Final_Exam_2022.Rmd
@@ -636,7 +636,24 @@ We suggest a strategy where the assets are held for 2 months instead of 1. This 
 ```{r}
 
 
+compute_portfolio_weights <- function(theta,
+                                      data) {
+  data %>%
+    group_by(month) %>%
+    bind_cols(
+      characteristic_tilt = data %>%
+        transmute(across(contains("lag"), ~ . / n)) %>%
+        as.matrix() %*% theta %>% as.numeric()
+    ) %>%
+    mutate(
+      # Definition of benchmark weight
+      weight_benchmark <-1/n
 
+      # Weights sum up to 1
+      weight_tilt = weight_tilt / sum(weight_tilt) 
+    ) %>%
+    ungroup()
+}
 
 
 
