--- a/AEF_Final_Exam_2022.Rmd
+++ b/AEF_Final_Exam_2022.Rmd
@@ -577,8 +577,7 @@ US_Stocks %>%
             beta_hml_estimate = summary(lm(ret_excess ~ mkt_excess + smb + hml))$coefficients[4,1],
             beta_hml_sd = summary(lm(ret_excess ~ mkt_excess + smb + hml))$coefficients[1,1]) %>%
   knitr::kable(booktabs = T, digits = 4, col.names = c("Permno", "Estimate", "sd", "Estimate", "sd", "Estimate", "sd", "Estimate", "sd"), caption = "CAPM alpha, beta and excess return for the value-weighted momentum-sorted portfolios", align = "c") %>%
-  kable_styling() %>%
-  add_header_above(c(" " = 1, "\\alpha" = 2, "$\\beta^{M}$" = 2, "$\\beta^{SMB}$" = 2, "$\\beta^{HML}$" = 2)) %>%
+  add_header_above(c(" " = 1, "$\\alpha$" = 2, "$\\beta^{M}$" = 2, "$\\beta^{SMB}$" = 2, "$\\beta^{HML}$" = 2)) %>%
   kable_paper("hover", full_width = T) %>%
   kable_styling(latex_options = "HOLD_position")
 
